--- a/Range Rover/css/global.css
+++ b/Range Rover/css/global.css
@@ -1,6 +1,6 @@
 
         h1{
-            color: #414141;
+            color: #ffffff;
             font-family: 'Raleway', sans-serif;
         text-shadow: 0 0 10px rgba(255, 0, 0, 0);
         /* font-style: italic; */
@@ -8,6 +8,37 @@
         border-bottom: 2px rgb(214, 214, 214) solid;
         font-size: 40px;
     }
+    .navbar{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 0px 20px;
+        background: rgba(55, 55, 55, 0.508);
+        backdrop-filter: blur(14px);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .brand-name{
+        margin: 0px 0;
+        padding: 20px 20px;
+        font-size: 30px;
+        width: fit-content;
+        border: 2px rgba(153, 153, 153, 0.774) solid;}
+    .nav-link{
+        float: right;
+        display: inline;
+        list-style: none;
+        padding: 20px 20px;
+        margin: 0 10px;
+        cursor: pointer;
+        border-bottom: 4px rgba(153, 153, 153, 0) solid;
+        transition: 0.2s ease;
+    }
+    .nav-link:hover{
+        border-bottom: 4px rgba(153, 153, 153, 0.637) solid;
+        transition: 0.2s ease;
+    }
+    .link{display: inline-block;}
     .section-title{
             font-family: 'Arimo', sans-serif;
     }
@@ -36,8 +67,8 @@
         .mini-container{
             margin: 10px 20px;
             border-radius: 6px;
-            background: #f0f0f0e0;
-            border: 2px #f0f0f0 solid;
+            background: #212121e0;
+            border: 2px #2b2b2be0 solid;
         }
         .mini-container .img{
             width: 30%;
@@ -45,7 +76,7 @@
             border-radius: 36px;
         }
         .first-sub-cont{
-            color: #414141;
+            color: #ffffff;
             float: right;
             width: 66%;
             padding: 10px 0px;
@@ -57,7 +88,7 @@
             font-size: 18px;
         }
         .first-sub-cont .details{
-            color: #4b4b4b;
+            color: #c2c2c2;
             font-family: 'Arimo', sans-serif;
             line-height: 30px;
             font-size: 14px;
@@ -72,7 +103,7 @@
             align-items: center;
             margin: 10px 12px;
             width: 31%;
-            background-color: #f0f0f0e0;
+            background-color: #1f1f1fe0;
             border: 0px #86868642 solid;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
             border-radius: 6px;
@@ -94,15 +125,15 @@
             display: block;
             padding: 0px 20px;
         }
-        .gr-details h4{color: #252525;}
+        .gr-details h4{color: #ffffff;}
         .sh-detail-primary{
-            color: #4b4b4b;
+            color: #929292;
             text-overflow: ellipsis;
             height: 56vh;
             line-height: 25px;
         }
         .sh-detail-secondary{
-            color: #4b4b4b;
+            color: #b5b5b5;
             text-overflow: ellipsis;
             height: 14vh;
             line-height: 25px;
@@ -118,21 +149,71 @@
         border-bottom: 2px rgb(214, 214, 214) solid;
         font-size: 30px;
     }
+    .navbar{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 0px 20px;
+        background: rgba(55, 55, 55, 0.508);
+        backdrop-filter: blur(14px);
+        z-index: 1;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .brand-name{
+        margin: 0px 0;
+        padding: 20px 20px;
+        font-size: 30px;
+        width: fit-content;
+        border: 2px rgba(153, 153, 153, 0.774) solid;}
+        .nav-ic{display: block;}
+        .nav-strg{display: none;}
+    .nav-link{
+        float: right;
+        width: 2%;
+        display: inline;
+        list-style: none;
+        padding: 10px 30px;
+        margin: 0 0px;
+        cursor: pointer;
+        border: 0px rgba(153, 153, 153, 0) solid;
+        transition: 0.2s ease;
+    }
+    .nav-link:hover{
+        border-bottom: 0px rgba(153, 153, 153, 0) solid;
+        transition: 0.2s ease;
+    }
+    .know-more{
+        float: right;
+        font-size: 12px;
+        font-style: italic;
+        text-decoration: none;
+        padding: 10px 20px;
+        background-color: #e0e0e000;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.5s;
+    }
+    .know-more:hover{
+        background-color: #d1d1d100;
+        text-decoration: underline;
+        transition: 0.1s;
+    }
         .mini-container{
-            margin: 10px 20px;
+            margin: 10px 10px;
             border-radius: 20px;
             background: #eeeeee00;
             border: 2px #e4e4e400 solid;
         }
         .mini-container .img{
-            width: 93%;
-            padding: 10px;
-            border-radius: 30px;
+            width:100%;
+            padding: 10px 0px;
+            border-radius: 16px;
         }
         .first-sub-cont{
             color: #414141;
             float: right;
-            width: 90%;
+            width: 98%;
             padding: 10px 0px;
             font-weight: 600;
             font-family: 'Raleway', sans-serif;
@@ -142,10 +223,12 @@
             font-size: 18px;
         }
         .first-sub-cont .details{
-            color: #4b4b4b;
+            border-bottom: 2px #2525259d solid;
+            padding-bottom: 10px;
+            color: #7b7b7b;
             font-family: 'Arimo', sans-serif;
             line-height: 30px;
-            font-size: 14px;
+            font-size: 12px;
         }
         .second-container{
             margin: 10px 0px;
@@ -155,29 +238,45 @@
         .gr-card{
             display: inline-block;
             align-items: center;
+            padding: 0px 0;
             margin: 10px 0px;
             width: 100%;
-            background-color: #f5f5f500;
-            border: 2px #e4e4e4 solid;
+            background-color: rgba(26, 26, 26, 0.597);
+            border: 2px #222222c5 solid;
             box-shadow: 0 0 0px rgba(0, 0, 0, 0.26);
-            border-radius: 20px;
+            border-radius: 6px;
             font-family: 'Arimo', sans-serif;
             overflow: hidden;
             transition: 0.5s ease;
         }
         .gr-card:hover{
-            transform: translateY(-10px);
-            background-color: #f5f5f5;
+            transform: translateY(0px);
             width: 100%;
-            border: 0px #00000042 solid;
-            box-shadow: 5px 5px 10px #00000042;
+            border: 2px #5c5c5c42 solid;
+            box-shadow: 0px 0px 0px #00000042;
             transition: 0.2s ease;
         }
         .gr-img{
             width: 100%;
         }
         .gr-details{
-            display: block;
-            padding: 20px;
+            height: 20vh;
+            /* display: block;
+            padding: 20px; */
+        }
+        .sh-detail-primary{
+            height: 20vh;
+            font-size: 10px;
+            white-space: nowrap;
+            width: calc(100%);
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .sh-detail-secondary{
+            height: 20vh;
+            /* white-space: nowrap; */
+            width: calc(100%);
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
