--- a/user/om_73/range rover/css/global.css
+++ b/user/om_73/range rover/css/global.css
@@ -1,416 +1,1 @@
-:root{
-    --white: #ffffff;
-    --faintwhite: #fafafa;
-    --black: #000000;
-    --richColor: #e0b68c;
-    --faintDark: #353535;
-    --shadow: #4d4d4d;
-    --transparent: #fafafa00;
-    --navbgcolor: #ffffff;
-}
-        /* h1{
-            color: #ffffff;
-            font-family: 'Raleway', sans-serif;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        font-style: italic;
-        padding: 10px 20px;
-        border-bottom: 2px rgb(214, 214, 214) solid;
-        font-size: 40px;
-    } */
-
-    ::-webkit-scrollbar{
-        display: block;
-        width: 5px;
-
-        margin: 20px;
-    }
-    ::-webkit-scrollbar-track{
-        background: var(--transparent);
-
-    }
-    ::-webkit-scrollbar-thumb{
-        background-color: var(--richColor);
-        width: 20px;
-    }
-    .navbar{
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        padding: 0px 20px;
-        background:  var(--navbgcolor);
-        border-bottom: 0px var(--richColor) solid;
-        backdrop-filter: blur(0px);
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        z-index: 9 ;
-    }
-    .brand-name{
-        margin: 0px 0;
-        padding: 20px 20px;
-        font-size: 30px;
-        width: fit-content;
-        border: 2px rgba(153, 153, 153, 0.774) solid;}
-    .nav-link{
-        position: relative;
-        float: right;
-        display: inline;
-        list-style: none;
-        padding: 20px 20px;
-        margin: 0 10px;
-        cursor: pointer;
-        color: #000;
-        border-bottom: 4px rgba(255, 255, 255, 0) solid;
-    }
-    .nav-link::after{
-        position: absolute;
-        content: " ";
-        width: 0%;
-        height: 4px;
-        background: #e0b68c;
-        left: 50%;
-        bottom: -5px;
-        transition: all 0.3s ease;
-    }
-    .nav-link:hover::after{
-        width: 100%;
-        left: 0;
-    }
-    /* .nav-link:hover{
-        color: rgb(77, 77, 77);
-        border-bottom: 4px #e0b68c solid;
-    } */
-    .link{display: inline-block;
-        color: rgb(77, 77, 77);}
-    .section-title{
-        font-family: 'Cinzel', serif;
-        letter-spacing: 1px;
-    }
-    .know-more{
-        float: right;
-        font-size: 12px;
-        font-style: italic;
-        text-decoration: none;
-        padding: 10px 20px;
-        color: var(--black);
-        background-color: var(--transparent);
-        border-radius: 5px;
-        cursor: pointer;
-        transition: 0.5s;
-    }
-    .know-more:hover{
-        background-color: #d1d1d100;
-        text-decoration: underline;
-        transition: 0.1s;
-    }
-    .ic-icon{
-        margin-left: 5px;
-        opacity: 1;}
-    .know-more:hover .ic-icon{
-        opacity: 1;
-    }
-        .mini-container{
-            margin: 10px 20px;
-            border-radius: 6px;
-            background: var(--transparent);
-            border: 2px var(--transparent) solid;
-        }
-        .mini-container .img{
-            width: 30%;
-            margin: 30px 0;
-            padding: 0px;
-            border-radius: 0px;
-            transform: rotate(-3deg);
-            box-shadow: 10px 10px 0px var(--shadow);
-        }
-        .first-sub-cont{
-            color: #e0b68c;
-            float: right;
-            width: 66%;
-            padding: 0px 0px;;
-            letter-spacing: 0.5px;
-            font-family: 'Cinzel', serif;
-            border: 2px rgba(170, 170, 170, 0) solid;
-        }
-        .first-sub-cont .details{
-            color: #5e5e5e;
-            font-family: 'Jost', sans-serif;
-            line-height: 30px;
-            font-size: 19px;
-        }
-        .second-container{
-            margin: 10px 20px;
-            padding: 0px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .gr-card{
-            display: inline-block;
-            align-items: center;
-            margin: 10px 12px;
-            width: 31%;
-            background-color: var(--white);
-            border: 0px #86868642 solid;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
-            border-radius: 6px;
-            font-family: 'Arimo', sans-serif;
-            overflow: hidden;
-            transition: 0.5s ease;
-        }
-        /* .gr-card:hover{
-            transform: translateY(-10px);
-            border: 0px #55555542 solid;
-            box-shadow: 5px 5px 10px #0000003d;
-            border-radius: 0px;
-            transition: 0.2s ease;
-        } */
-        .gr-img{
-            width: 100%;
-        }
-        .gr-details{
-            display: block;
-            padding: 0px 20px;
-        }
-        .gr-details h4{
-            color: var(--richColor);
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-        }
-        .sh-detail-primary{
-            color: var(--faintDark);
-            font-family: 'Jost', sans-serif;
-            text-overflow: ellipsis;
-            height: 56vh;
-            line-height: 25px;
-        }
-        .sh-detail-secondary{
-            color: var(--faintDark);
-            text-overflow: ellipsis;
-            font-family: 'Jost', sans-serif;
-            height: 14vh;
-            line-height: 25px;
-        }
-        .ex-container{
-            color: var(--black);
-            background-color: transparent;
-            letter-spacing: 2px;
-            margin: 120px 0;
-            font-family: 'Cinzel', serif;
-        }
-        .explore{
-            position: relative;
-            display: inline-block;
-            color: var(--richColor);
-            background-color: #aeaeae00;
-            border-bottom: 4px var(--transparent) solid;
-            border-radius: 0px;
-            padding: 20px 40px;
-            font-size: 14px;
-            letter-spacing: 1px;
-        margin: 10px 20px;
-        cursor: pointer;
-        }
-        .explore::after{
-            position: absolute;
-            content: " ";
-            width: 0%;
-            height: 2px;
-            background: #e0b68c;
-            left: 50%;
-            bottom: 0px;
-            transition: all 0.2s ease;
-        }
-        .explore:hover::after{
-            width: 100%;
-            left: 0;
-        }
-        #loading{
-          background-color: rgb(255, 255, 255);
-          /* background: linear-gradient(180deg, #c200c2, #c200c2); */
-          display: none;
-          position: fixed;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          width: 100%;
-          z-index: 19;
-        }
-        .loading-img{
-          width: 13%;
-          margin-top: 20%;
-          opacity: .5;
-        }
-    .spinner {
-       width: 56px;
-       height: 56px;
-       margin-top: 20%;
-       border-radius: 100%;
-       border: 2px solid;
-       border-color: #000000;
-       border-right-color: #000000;
-       border-left-color: #00000000;
-       border-top-color: #00000000;
-       /* box-shadow: 0 0 54px #410066,
-                  inset 0 0 10px #410066; */
-       animation: spinner-d3wgkg .3s infinite linear;
-    }
-
-    @keyframes spinner-d3wgkg {
-       to {
-          transform: rotate(1turn);
-       }
-    }
-@media screen and (max-width: 768px) {
-        center h1{
-            display: none;
-    }
-    .navbar{
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        padding: 0px 20px;
-        background: rgb(255, 255, 255);
-        backdrop-filter: blur(0px);
-        z-index: 1;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    .brand-name{
-        margin: 0px 0;
-        padding: 20px 20px;
-        font-size: 30px;
-        width: fit-content;
-        border: 2px rgba(153, 153, 153, 0.774) solid;}
-        .nav-ic{display: block;}
-        .nav-strg{display: none;}
-    .nav-link{
-        float: right;
-        width: 2%;
-        display: inline;
-        list-style: none;
-        padding: 10px 30px;
-        margin: 0 0px;
-        cursor: pointer;
-        border: 0px rgba(153, 153, 153, 0) solid;
-        transition: 0.2s ease;
-    }
-    .nav-link:hover{
-        border-bottom: 0px rgba(153, 153, 153, 0) solid;
-        transition: 0.2s ease;
-    }
-    .know-more{
-        float: right;
-        font-size: 12px;
-        font-style: italic;
-        text-decoration: none;
-        padding: 10px 20px;
-        background-color: #e0e0e000;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: 0.5s;
-    }
-    .know-more:hover{
-        background-color: #d1d1d100;
-        text-decoration: underline;
-        transition: 0.1s;
-    }
-        .mini-container{
-            margin: 10px 10px;
-            border-radius: 20px;
-            background: #eeeeee00;
-            border: 2px #e4e4e400 solid;
-        }
-        .mini-container .img{
-            width:100%;
-            padding: 10px 0px;
-            border-radius: 0px;
-            transform: rotate(0deg);
-            box-shadow: 0px 0px 0px rgb(56, 56, 56);
-        }
-        .first-sub-cont{
-            color: #414141;
-            float: right;
-            width: 98%;
-            padding: 10px 0px;
-            font-weight: 600;
-            font-family: 'Jost', sans-serif;
-            border: 2px rgba(170, 170, 170, 0) solid;
-        }
-        .first-sub-cont h2{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 1px;
-            font-size: 18px;
-        }
-        .first-sub-cont .details{
-            border-bottom: 2px #2525259d solid;
-            padding-bottom: 10px;
-            color: #7b7b7b;
-            font-family: 'Jost', sans-serif;
-            line-height: 30px;
-            font-size: 12px;
-        }
-        .second-container{
-            margin: 10px 0px;
-            padding: 20px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .gr-card{
-            display: inline-block;
-            align-items: center;
-            padding: 0px 0;
-            margin: 10px 0px;
-            width: 100%;
-            background-color: #fafafa;
-            border: 0px #222222c5 solid;
-            box-shadow: 0 0 0px rgba(0, 0, 0, 0.26);
-            border-radius: 6px;
-            font-family: 'Jost', sans-serif;
-            overflow: hidden;
-            transition: 0.5s ease;
-        }
-        .gr-card:hover{
-            transform: translateY(0px);
-            width: 100%;
-            border: 0px #5c5c5c42 solid;
-            box-shadow: 0px 0px 0px #00000042;
-            transition: 0.2s ease;
-        }
-        .gr-img{
-            width: 100%;
-        }
-        .gr-details{
-            height: 20vh;
-            /* display: block;
-            padding: 20px; */
-        }
-        .sh-detail-primary{
-            height: 20vh;
-            font-size: 13px;
-            white-space: nowrap;
-            width: calc(100%);
-            overflow: hidden;
-            font-family: 'Jost', sans-serif;
-            text-overflow: ellipsis;
-        }
-        .sh-detail-secondary{
-            height: 20vh;
-            font-size: 12px;
-            /* white-space: nowrap; */
-            width: calc(100%);
-            overflow: hidden;
-            font-family: 'Jost', sans-serif;
-            text-overflow: ellipsis;
-        }
-        .explore{
-            display: inline-block;
-            color: var(--richColor);
-            background-color: #aeaeae00;
-            border-bottom: 4px var(--transparent) solid;
-            border-radius: 0px;
-            padding: 10px 40px;
-            font-size: 14px;
-            letter-spacing: 1px;
-        margin: 20px 20px;
-        cursor: pointer;
-        }
-    }
+:root{--white:#ffffff;--faintwhite:#fafafa;--black:#000000;--richColor:#e0b68c;--faintDark:#353535;--shadow:#4d4d4d;--transparent:#fafafa00;--navbgcolor:#ffffff}::-webkit-scrollbar{display:block;width:5px;margin:20px}::-webkit-scrollbar-track{background:var(--transparent)}::-webkit-scrollbar-thumb{background-color:var(--richColor);width:20px}.navbar{position:fixed;top:0;left:0;right:0;padding:0px 20px;background:var(--navbgcolor);border-bottom:0px var(--richColor) solid;backdrop-filter:blur(0px);font-family:'Gill Sans','Gill Sans MT',Calibri,'Trebuchet MS',sans-serif;z-index:9}.brand-name{margin:0px 0;padding:20px 20px;font-size:30px;width:fit-content;border:2px rgba(153,153,153,0.774) solid}.nav-link{position:relative;float:right;display:inline;list-style:none;padding:20px 20px;margin:0 10px;cursor:pointer;color:#000;border-bottom:4px rgba(255,255,255,0) solid}.nav-link::after{position:absolute;content:"";width:0%;height:4px;background:#e0b68c;left:50%;bottom:-5px;transition:all 0.3s ease}.nav-link:hover::after{width:100%;left:0}.link{display:inline-block;color:rgb(77,77,77)}.section-title{font-family:'Cinzel',serif;letter-spacing:1px}.know-more{float:right;font-size:12px;font-style:italic;text-decoration:none;padding:10px 20px;color:var(--black);background-color:var(--transparent);border-radius:5px;cursor:pointer;transition:0.5s}.know-more:hover{background-color:#d1d1d100;text-decoration:underline;transition:0.1s}.ic-icon{margin-left:5px;opacity:1}.know-more:hover .ic-icon{opacity:1}.mini-container{margin:10px 20px;border-radius:6px;background:var(--transparent);border:2px var(--transparent) solid}.mini-container .img{width:30%;margin:30px 0;padding:0px;border-radius:0px;transform:rotate(-3deg);box-shadow:10px 10px 0px var(--shadow)}.first-sub-cont{color:#e0b68c;float:right;width:66%;padding:0px 0px;;letter-spacing:0.5px;font-family:'Cinzel',serif;border:2px rgba(170,170,170,0) solid}.first-sub-cont .details{color:#5e5e5e;font-family:'Jost',sans-serif;line-height:30px;font-size:19px}.second-container{margin:10px 20px;padding:0px;border:2px rgba(0,0,0,0) solid}.gr-card{display:inline-block;align-items:center;margin:10px 12px;width:31%;background-color:var(--white);border:0px #86868642 solid;box-shadow:0px 0px 10px rgba(0,0,0,0);border-radius:6px;font-family:'Arimo',sans-serif;overflow:hidden;transition:0.5s ease}.gr-img{width:100%}.gr-details{display:block;padding:0px 20px}.gr-details h4{color:var(--richColor);font-family:'Cinzel',serif;letter-spacing:2px}.sh-detail-primary{color:var(--faintDark);font-family:'Jost',sans-serif;text-overflow:ellipsis;height:56vh;line-height:25px}.sh-detail-secondary{color:var(--faintDark);text-overflow:ellipsis;font-family:'Jost',sans-serif;height:14vh;line-height:25px}.ex-container{color:var(--black);background-color:transparent;letter-spacing:2px;margin:120px 0;font-family:'Cinzel',serif}.explore{position:relative;display:inline-block;color:var(--richColor);background-color:#aeaeae00;border-bottom:4px var(--transparent) solid;border-radius:0px;padding:20px 40px;font-size:14px;letter-spacing:1px;margin:10px 20px;cursor:pointer}.explore::after{position:absolute;content:"";width:0%;height:2px;background:#e0b68c;left:50%;bottom:0px;transition:all 0.2s ease}.explore:hover::after{width:100%;left:0}#loading{background-color:rgb(255,255,255);display:none;position:fixed;top:0;left:0;right:0;bottom:0;width:100%;z-index:19}.loading-img{width:13%;margin-top:20%;opacity:.5}.spinner{width:56px;height:56px;margin-top:20%;border-radius:100%;border:2px solid;border-color:#000000;border-right-color:#000000;border-left-color:#00000000;border-top-color:#00000000;animation:spinner-d3wgkg .3s infinite linear}@keyframes spinner-d3wgkg{to{transform:rotate(1turn)}}@media screen and(max-width:768px){center h1{display:none}.navbar{position:fixed;top:0;left:0;right:0;padding:0px 20px;background:rgb(255,255,255);backdrop-filter:blur(0px);z-index:1;font-family:'Gill Sans','Gill Sans MT',Calibri,'Trebuchet MS',sans-serif}.brand-name{margin:0px 0;padding:20px 20px;font-size:30px;width:fit-content;border:2px rgba(153,153,153,0.774) solid}.nav-ic{display:block}.nav-strg{display:none}.nav-link{float:right;width:2%;display:inline;list-style:none;padding:10px 30px;margin:0 0px;cursor:pointer;border:0px rgba(153,153,153,0) solid;transition:0.2s ease}.nav-link:hover{border-bottom:0px rgba(153,153,153,0) solid;transition:0.2s ease}.know-more{float:right;font-size:12px;font-style:italic;text-decoration:none;padding:10px 20px;background-color:#e0e0e000;border-radius:5px;cursor:pointer;transition:0.5s}.know-more:hover{background-color:#d1d1d100;text-decoration:underline;transition:0.1s}.mini-container{margin:10px 10px;border-radius:20px;background:#eeeeee00;border:2px #e4e4e400 solid}.mini-container .img{width:100%;padding:10px 0px;border-radius:0px;transform:rotate(0deg);box-shadow:0px 0px 0px rgb(56,56,56)}.first-sub-cont{color:#414141;float:right;width:98%;padding:10px 0px;font-weight:600;font-family:'Jost',sans-serif;border:2px rgba(170,170,170,0) solid}.first-sub-cont h2{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:1px;font-size:18px}.first-sub-cont .details{border-bottom:2px #2525259d solid;padding-bottom:10px;color:#7b7b7b;font-family:'Jost',sans-serif;line-height:30px;font-size:12px}.second-container{margin:10px 0px;padding:20px;border:2px rgba(0,0,0,0) solid}.gr-card{display:inline-block;align-items:center;padding:0px 0;margin:10px 0px;width:100%;background-color:#fafafa;border:0px #222222c5 solid;box-shadow:0 0 0px rgba(0,0,0,0.26);border-radius:6px;font-family:'Jost',sans-serif;overflow:hidden;transition:0.5s ease}.gr-card:hover{transform:translateY(0px);width:100%;border:0px #5c5c5c42 solid;box-shadow:0px 0px 0px #00000042;transition:0.2s ease}.gr-img{width:100%}.gr-details{height:20vh;}.sh-detail-primary{height:20vh;font-size:13px;white-space:nowrap;width:calc(100%);overflow:hidden;font-family:'Jost',sans-serif;text-overflow:ellipsis}.sh-detail-secondary{height:20vh;font-size:12px;width:calc(100%);overflow:hidden;font-family:'Jost',sans-serif;text-overflow:ellipsis}.explore{display:inline-block;color:var(--richColor);background-color:#aeaeae00;border-bottom:4px var(--transparent) solid;border-radius:0px;padding:10px 40px;font-size:14px;letter-spacing:1px;margin:20px 20px;cursor:pointer}}
