--- a/user/vivek_78/global.css
+++ b/user/vivek_78/global.css
@@ -2,19 +2,35 @@ body{
     background-color: #fff;
     color: #000;
 }
+.float-left{
+    float: left;
+    width: 40%;
+    text-align: justify;
+    line-height: 23px;
+}
+.float-right{
+    float: right;
+    width: 57%;
+    text-align: justify;
+    line-height: 23px;
+}
 .card{
     display: inline-block;
     border: 1px rgb(194, 194, 194) solid;
     border-radius: 4px;
     width: 23%;
-    height: 72vh;
+    height: 500px;
     margin: 1vh 0.6vw;
     overflow: hidden;
+    cursor: pointer;
     transition: all 0.2s ease;
 }
-/* .card:hover{
+.card:hover{
     box-shadow: 5px 5px 5px rgb(206, 206, 206);
-} */
+}
+.card:active{
+    transform:scale(1.03);
+}
 .card .img{
     width: 100%;
 }
@@ -29,4 +45,31 @@ body{
 }
 section{
     margin: 10px 20px;
+    border: 0px #000 solid;
+}
+.box-container{
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    height: 400px;
+    border: 0px #000 solid;
+}
+.img{
+    width: 100%;
+}
+.explore{
+    border: 0px #000 solid;
+    margin: 10px 20px;
+    padding: 10px 20px;
+}
+.exp{
+    color: #000;
+    display: inline-block;
+    margin: 19px 10px;
+    width: fit-content;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+.exp:hover{
+    background-color: rgb(230, 230, 230);
 }
